force-app/main/default/objects/smagicinteract__Channel_Master__c/smagicinteract__Channel_Master__c.object-meta.xml
<CustomObject>
    <description>It content list of channel supported by sms magic</description>
    <label>Channel Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>