force-app/main/default/objects/smagicinteract__Channel_Master__c/fields/smagicinteract__Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Code__c</fullName>
    <description>Stored the channel type</description>
    <inlineHelpText>Stored the channel type</inlineHelpText>
    <label>Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>