force-app/main/default/objects/smagicinteract__Channel_Master__c/fields/smagicinteract__Compliance_Enable__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Compliance_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For making compliance enable or disable</description>
    <inlineHelpText>For making compliance enable or disable</inlineHelpText>
    <label>Compliance Enable</label>
    <type>Checkbox</type>
</CustomField>