force-app/main/default/objects/smagicinteract__Channel_Master__c/fields/smagicinteract__Duration__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Duration__c</fullName>
    <description>Hours of window support</description>
    <inlineHelpText>Hours of window support</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>