force-app/main/default/objects/smagicinteract__Channel_Master__c/fields/smagicinteract__Icon_Url__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Icon_Url__c</fullName>
    <description>Stores the url for the channel icon image</description>
    <label>Icon Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>