force-app/main/default/objects/smagicinteract__Channel_Master__c/fields/smagicinteract__Label__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Label__c</fullName>
    <description>This label refer to channel type code</description>
    <inlineHelpText>This label refer to channel type code</inlineHelpText>
    <label>Label</label>
    <length>250</length>
    <type>Text</type>
</CustomField>