force-app/main/default/objects/smagicinteract__Channel_Master__c/fields/smagicinteract__Not_Supported__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Not_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for disable Channel master trigger</description>
    <label>Not Supported</label>
    <type>Checkbox</type>
</CustomField>